--- a/IELTS/教师和课堂是否会被取代.md
+++ b/IELTS/教师和课堂是否会被取代.md
@@ -5,6 +5,23 @@ Some people think typical teaching of a teacher and students in the class will n
 by the year 2050. Do you agree or disagree?
 
 
+The topic of whether traditional teaching with a teacher and students sitting in a classroom
+will disappear in the coming years seems to ignite public debate recently. According to my 
+perspective, the traditional way of teaching will exist for a long time.
+
+
+With the power of computer and Internet's growing in an unexpected way, remote or online education 
+becomes widely accepted and increasingly popular. It's totally understandable for people believing 
+that the traditional way of teaching will vanish in less than 50 years. The online education breaks
+the limit of time and location, even the amount of students - thousands of students can take part in
+a course at the same time. In addition, the online course is so easy to spread that it sometimes gains
+enormous attention unexpectedly.
+
+Given the advantages above, I believe the mordern online education will boom in the future. However ther are disadvantages that can hardly be changed in the future. For example, what can we do for the lack of interaction
+in a online course? It's nearly impossible to conduct a dangerous chemical experiment without hand-by-hand instructions. Moreover, the online way is to emotion expressing and physical education such as music and arts, it's defeated by the face to face way.
+
+However 
+it does not necessarily mean typical teaching method will disappear. 
 
 
 框架
