finished 1st time

--- a/IELTS/教师和课堂是否会被取代.md
+++ b/IELTS/教师和课堂是否会被取代.md
@@ -1,4 +1,3 @@
-
 2010.12.18
  
 Some people think typical teaching of a teacher and students in the class will not exist
@@ -17,20 +16,15 @@ the limit of time and location, even the amount of students - thousands of stude
 a course at the same time. In addition, the online course is so easy to spread that it sometimes gains
 enormous attention unexpectedly.
 
-Given the advantages above, I believe the mordern online education will boom in the future. However ther are disadvantages that can hardly be changed in the future. For example, what can we do for the lack of interaction
-in a online course? It's nearly impossible to conduct a dangerous chemical experiment without hand-by-hand instructions. Moreover, the online way is to emotion expressing and physical education such as music and arts, it's defeated by the face to face way.
+Given the advantages above, I believe the modern online education will boom in the future. However ther are disadvantages that can hardly be changed in the future. For example, what can we do for the lack of interaction
+in a online course? It's nearly impossible to conduct a dangerous chemical experiment without hand-by-hand instructions. Moreover, the online way is defeated by the face to face way in emotion expressing such as music
+and arts, and physical education. Besides, the freedom of online education makes it less effective. because of 
+no mandatory schedule and assignment, no pressure from a teacher, students can easily be distracted sitting in 
+front of a computer.
 
-However 
-it does not necessarily mean typical teaching method will disappear. 
+The popularity of modern teaching method does not necessarily mean that the traditional way will disappear. 
+The classroom with a teacher and students is a generally more widely accepted method, and it has nearly 
+no dependencies except chalk and blackboard. while in the less developed areas, there is even no electricity supplier, not to mention the multi-media computer and high speed network. The face to face teaching and instant interaction with students allows the teacher to adjust the progress at any time, which is significant in practise and a benefit the online way can not catch up with. Another critical point, a good teacher help students with team work, exhibits good manner by setting up an example. This influence can not be replaced by online education.
 
+In brief, having considered all the factors above, I personally belive the typical teaching of a teacher and students is still a preferred way in the future.
 
-框架
-+ 开头，背景句引出话题+表明立场
- 
-+  让步段，论证立观点
-+  
- 反驳段1，论证自己的观点
-
- 反驳段2，进一步论证自己的观点
-
- 总结，重申，完善自己的观点
