--- a/IELTS/抱怨信_超市遇小意外.md
+++ b/IELTS/抱怨信_超市遇小意外.md
@@ -7,19 +7,18 @@ Write a letter to the manager of the supermarket, In your letter
 * suggest how the supermarket could prevent the similar accidents.
 
 Dear Sir or Madam,
-I am writing with regard to the minor accident I encountered in your supermarket. 
 
 This is George Winberg, a regular customer of your supermarket who lives nearby in Sunshine Town section #2.
-It was about 18:30, 2016-09-16, when I passed by the seafood section, I fell down because of the slippery floor.
-I guess the staff just cleaned the floor, and left water on the ground due to a carelessness. There was no sign
-alongside, and the light was not bright enough to notice the wet.
+
+I am writing with regard to the minor accident I encountered in your supermarket. 
+It was about 18:30, 2016-09-16, when I passed by the seafood section, I fell down because of the slippery floor. I guess the staff just cleaned the floor, and left water on the ground due to a carelessness. There was no sign alongside, and the light was not bright enough to notice the wet.
 
 I suggest you set up a sign when the floor might be slippery, and equip with a brighter lighting in the seafood section to avoid similar accidents in the future. 
 
-I have been a satisfied customer of your supermarket for several years, I hope this letter draw your 
-attention. Thanks for your time to read this letter. 
+I have been a satisfied customer of your supermarket for several years, I hope this letter draw your attention. Thanks for your time to read this letter. 
 
 Yours faithfully
+
 George Winberg
 
 
