--- a/IELTS/抱怨信_超市遇小意外.md
+++ b/IELTS/抱怨信_超市遇小意外.md
@@ -11,7 +11,8 @@ Dear Sir or Madam,
 This is George Winberg, a regular customer of your supermarket who lives nearby in Sunshine Town section #2.
 
 I am writing with regard to the minor accident I encountered in your supermarket. 
-It was about 18:30, 2016-09-16, when I passed by the seafood section, I fell down because of the slippery floor. I guess the staff just cleaned the floor, and left water on the ground due to a carelessness. There was no sign alongside, and the light was not bright enough to notice the wet.
+It was about 18:30, 2016-09-16, when I passed by the seafood section, I fell down because of the slippery floor. I guess the staff just cleaned the floor, and left water on the ground due to a carelessness. There was no sign alongside, and the light was not bright enough to notice the wet. Fortunately it brought no injury 
+except some pain, I did not go to hospital.
 
 I suggest you set up a sign when the floor might be slippery, and equip with a brighter lighting in the seafood section to avoid similar accidents in the future. 
 
