--- a/IELTS/教师和课堂是否会被取代.md
+++ b/IELTS/教师和课堂是否会被取代.md
@@ -4,7 +4,7 @@ Some people think typical teaching of a teacher and students in the class will n
 by the year 2050. Do you agree or disagree?
 
 
-The topic of whether traditional teaching with a teacher and students sitting in a classroom
+The topic of whether traditional teaching with a teacher and students in a classroom
 will disappear in the coming years seems to ignite public debate recently. According to my 
 perspective, the traditional way of teaching will exist for a long time.
 
@@ -19,8 +19,7 @@ enormous attention unexpectedly.
 In spite of the advantages above, there are drawbacks that can hardly be overcome in the future. For example, what can we do for the lack of interaction in a online course? It's nearly impossible to conduct a dangerous chemical experiment without hand-by-hand instructions. Moreover, the online way is defeated by the face to face way in emotion expressing such as music and arts, and physical education. Besides, the freedom of online education makes it less effective. Because of no mandatory schedule and assignment, no pressure from a teacher, students can easily be distracted in front of a computer.
 
 The popularity of modern teaching method does not necessarily mean that the traditional way will disappear. 
-The classroom with a teacher and students is a generally more widely accepted method, and it has nearly 
-no dependencies except chalk and blackboard. While in the less developed areas, there is even no electricity supplier, not to mention the multi-media computer and high speed network required by the online education. The face to face teaching and instant interaction with students allows the teacher to adjust the progress at any time, which is significant in practise and a benefit the online way can not catch up with. Another critical point, a good teacher helps students with team work, exhibits good manner by setting up an example. This influence can not be replaced by online education.
+The classroom with a teacher and students is a generally more widely accepted method, and for most subjects it has nearly no dependencies except chalk and blackboard. While in the less developed areas, there is even no electricity supplier, not to mention the multi-media computer and high speed network required by the online education. The face to face teaching and instant interaction with students allows the teacher to adjust the progress at any time, which is significant in practise and a benefit the online way can not catch up with. Another critical point, a good teacher helps students with team work, exhibits good manner by setting up an example. This influence can not be replaced by online education.
 
 In brief, having considered all the factors above, I personally belive the typical teaching of a teacher and students is still a preferred way in the future.
 
