--- a/IELTS/卖家具的信.md
+++ b/IELTS/卖家具的信.md
@@ -22,7 +22,7 @@ The couch is 1.8 meters in length and 0.8 meter in depth, it goes with
 2 cushions which are quite comfortable. If you have a visitor, he/she can
 sleep in the couch for several days without any complaints. The desk-chair suit is a 
 multi-function one, It fits in up to 3 laptops and a large monitor.
-I've beeing using them for along time, but they are well maintained, and look like
+I've been using them for along time, but they are well maintained, and look like
 90 percent as new ones.
 
 Since we are busy at working days, I suggest you come and see the furniture by yourself 
@@ -31,9 +31,8 @@ We can discuss the details of trading face to face.
 
 
 Best Wishes.
+
 Truly George
-
-
 
 
 finished at 20:00, 2016-09-25
